--- a/styles/global.css
+++ b/styles/global.css
@@ -32,11 +32,9 @@
   --ff-roboto-flex: 'Roboto Flex',sans-serif;
 
   /* ==== Pesos ==== */
-  --fw-sora-extrabold: 800;   /* Sora ExtraBold */
-  --fw-sora-bold: 700;        /* Sora Bold */
-  --fw-roboto-mono-bold: 700; /* Roboto Mono Bold */
-  --fw-roboto-flex-medium: 500;/* Roboto Flex Medium */
-  --fw-roboto-flex-bold: 700; /* Roboto Flex Bold */
+  --fw-800: 800;
+  --fw-700: 700;
+  --fw-500: 500;
 
   /* ==== Tamanhos (font-size) ==== */
   --fs-display-large: 72px;
@@ -61,5 +59,30 @@
 
 body {
   background-color: var(--bg-primary);
+  background-image: url(../assets/imgs/Shapes.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   color: var(--content-primary);
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  cursor: pointer;
+
+  &:hover {
+    > img:first-child {
+      rotate: 180deg;
+    }
+  }
+}
+
+.logo > img:first-child {
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.logo > img:first-child:hover {
+  rotate: 180deg;
 }
