--- a/styles/global.css
+++ b/styles/global.css
@@ -1,88 +1,147 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+/* Resetando */
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+ /* Criando as variáveis na raiz */
+
 :root {
+/* Variáveis de cor */
+--content-primary: #FFFFFF;
+--content-secondary: #c7c9cc;
+--content-tertiary: #d9d9d9;
+--content-brand: #d58de7;
 
-  /* content */
-  --content-primary: #FFFFFF;
-  --content-secondary: #C7C9CC;
-  --content-tertiary: #D9D9D9;
-  --content-brand: #C58DE7;
-  --color-inverse: #030203;
+--color-inverse: #030203;
 
-  /* background */
-  --bg-primary: #020202;
-  --bg-secondary: #111012;
-  --bg-tertiary: #24222E;
-  --bg-brand: #C58DE7;
-  --bg-gray: #3D3D3D;
+--bg-primary: #020202;
+--bg-secondary: #111012;
+--bg-tertiary: #24222e;
+--bg-brand: #c58de7;
+--bg-gray: #3d3d3d;
 
-  /* accent */
-  --accent-pink: #D586E0;
-  --accent-blue: #91A1FA;
-  --accent-green: #77C0AF;
-  --accent-lime: #D1DC97;
-  --accent-red: #E9A9B3;
+--accent-pink: #d586e0;
+--accent-blue: #91a1fa;
+--accent-green: #77c0a7;
+--accent-lime: #d1dc97;
+--accent-red: #e9a9b3;
 
-  /* ==== Famílias de Fonte ==== */
-  --ff-sora: 'Sora',sans-serif;
-  --ff-roboto-mono: 'Roboto Mono',monospace;
-  --ff-roboto-flex: 'Roboto Flex',sans-serif;
+--gradient-border: linear-gradient(90deg,
+    #77C0AF 0%, #D1DC97 14.84%, #E9A9B3 32.15%, #D586E0 65.79%, #91A1FA 84.58%
+);
+--gradient-bg: linear-gradient(
+    #D586E0 0%, #91A1FA 98.93%
+);
+--gradient-content: linear-gradient(90deg, #C7C9CC 0%, #3D3D3D 100%);
 
-  /* ==== Pesos ==== */
-  --fw-800: 800;
-  --fw-700: 700;
-  --fw-500: 500;
+/*Variáveis de fonte */
 
-  /* ==== Tamanhos (font-size) ==== */
-  --fs-display-large: 72px;
-  --fs-display-medium: 40px;
-  --fs-display-small: 32px;
-  --fs-overline: 16px;
-  --fs-paragraph-large: 16px;
-  --fs-paragraph-medium: 14px;
-  --fs-paragraph-small: 12px;
-  --fs-label-medium: 20px;
-  --fs-label-small: 16px;
+--ff-sora: "Sora", sans-serif;
+--dp-lg: 800 4.5rem/1.3 var(--ff-sora); 
+--dp-md: 800 2.5rem/1.3 var(--ff-sora);
+--dp-sm: 600 2rem/1.3 var(--ff-sora);
 
-  /* ==== Line-heights ==== */
-  /* para 130% no CSS, usamos 1.3; para 150%, usamos 1.5 */
-  --lh-130:1.3;
-  --lh-150:1.5;
+--uppercase: uppercase; 
 
-  /* ==== Texto em maiúsculas quando necessário ==== */
-  --text-transform-uppercase: uppercase;
-  --text-transform-none: none;
+--ff-mono: "Roboto Mono", monospace;
+--overline: 600 1rem/1.5 var(--ff-mono);
+--number-mono: 600 3rem/1.5 var(--ff-mono);
+
+--ff-flex: "Roboto Flex", sans-serif;
+--paragraph-lg: 500 1rem/1.5 var(--ff-flex);
+--paragraph-md: 500 0.875rem/1.5 var(--ff-flex);
+--paragraph-sm: 500 0.75rem/1.5 var(--ff-flex);
+--label-md: 600 1.25rem/1.5 var(--ff-flex);
+--label-sm: 600 1rem/1.5 var(--ff-flex);
+
+/* Layout  */
+--max-width: 375px; 
+--px-margin: 2.25rem;
+
 }
 
 body {
-  background-color: var(--bg-primary);
-  background-image: url(../assets/imgs/Shapes.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: var(--content-primary);
+    background-color: var(--bg-primary);
+    position: relative;
+    overflow-x: hidden;
+    justify-content: center;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 11px;
-  cursor: pointer;
+#bg-shape{ 
+    position: absolute;
+    z-index: -2;
+    background: linear-gradient(-180deg, rgba(0, 0, 0, 0.9) 22.66%, rgba(0, 0, 0, 0.54) 100%), url(../assets/Shapes.png);
+height: 100%;
+    left: -50%;
+    bottom: 0;
+    width: 200%;
+}
 
-  &:hover {
-    > img:first-child {
-      rotate: 180deg;
+
+/* Dando uppercase aos demais */ 
+h1, h2, h3, label {
+    text-transform: var(--uppercase);
+}
+
+/* Utility */ 
+.container {
+    max-width: min(var(--max-width), 100% - 2 * var(--px-margin));
+    margin-inline: auto;
+}
+
+.grid {
+    display: grid;
+}
+
+.desktop-only {
+    display: none;
+}
+
+@media (width >= 700px) {
+    :root {
+        --max-width: 80%;
     }
-  }
 }
 
-.logo > img:first-child {
-  transition: all 0.5s ease-in-out;
-  cursor: pointer;
+
+@media (950px <= width) {
+:root {
+    --max-width: 80%;
+    --px-margin: 4rem;
 }
 
-.logo > img:first-child:hover {
-  rotate: 180deg;
+
+.desktop-only {
+    display: block;
+}
+
+#layout {
+    display: flex;
+    gap: 4rem;
+    margin-bottom: 6rem;
+}
+
+    
+}
+
+
+@media (width >= 1200px) {
+:root {
+    --max-width: 1280px; 
+    --px-margin: 6rem;
+}
+
+
+body {
+    gap: 5.75rem;
+
+& #layout {
+    gap: 6rem;
+    margin-bottom: 10rem;
+}
+
+}
+
 }
