--- a/styles/header.css
+++ b/styles/header.css
@@ -1,50 +1,69 @@
-.free {
-  display: inline-block;
-  margin-top: 5.625rem;
-  margin-bottom: 0.75rem;
-
-  font-family: var(--ff-roboto-mono);
-  font-weight: var(--fw-700);
-  font-size: var(--fs-paragraph-large);
-  line-height: var(--lh-150);
-  color: var(--content-secondary);
-  text-transform: uppercase;
+img[src*="logo"] {
+object-fit: cover;
+    display: block;
+    margin-inline: auto;
+    margin-top: 2.75rem;
 }
 
-h1 {
-  font-family: var(--ff-sora);
-  max-width: 509px;
-  font-weight: var(--fw-800);
-  font-size: var(--fs-display-large);
-  line-height: var(--lh-130);
-  color: var(--content-primary);
-  text-transform: uppercase;
-  margin-bottom: 38px;
+header {
+    padding-block: 2.5rem;
+gap: 3rem;
+
+
+& div:nth-child(1) {
+    gap: .5rem;
 }
 
-.faq {
-  display: flex;
-  align-items: flex-start;
-  max-width: 358px;
-  gap: 0.5rem;
-  margin-bottom: 36px;
+& h3 {
+    font: var(--overline);
+    background: var(--gradient-content);
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
 
-  & div {
-    display: flex;
-     flex-direction: column;
-  }
+& h1 {
+    font: var(--dp-md);
+    color: var(--content-primary);
+    max-width: 20rem;
+}
 
-  & span {
-    color: var(--content-brand);
-    font-size: var(--fs-paragraph-medium);
-    font-family: var(--ff-roboto-flex);
-    font-weight: var(--fw-500);
-  }
+}
 
-  & p {
-    font-size: var(--fs-paragraph-small);
-    font-weight: var(--fw-500);
-    font-family: var(--ff-roboto-flex);
-    line-height: var(--lh-150);
-  }
+
+@media (950px <= width) {
+    img[src*="logo"] {
+        margin-inline: 0 auto;
+                margin-block: 3rem;
+            }
+        
+header {
+    padding-block: 0;
+    gap: 2rem;
+    max-width: 26rem;
+    max-height: 22rem;
+
+    & h1 {
+font-size: 3.25rem;
+max-width: 100%;
+    }
+}
+
+
+}
+
+@media (width >= 1200px) {
+    img[src*="logo"] {
+        margin-block: 5rem 0;
+    }
+
+
+    header {
+        max-width: 34rem;
+
+        & h1 {
+            font: var(--dp-lg);
+        }
+
+    }
 }
