--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,5 @@
-@import url(global.css);
-@import url(section.css);
-@import url(header.css);
+@import url(./global.css);
+@import url(./header.css);
+@import url(./main.css);
+@import url(./footer.css);
+@import url(./draw.css);
